# quant-trade

./: .editorconfig  .gitignore  AGENTS.md  JAVA_WORKFLOW.md  README.md  monorepo.md  quant_trade_ultimate_design.md  quant_trading_design_doc.md
.github/workflows/: ci.yml
contracts/signal/: README.md  (+1 more)
docs/: README.md  implementation-status.md  operations-runbook.md
infra/: docker-compose.yml
quant-research/: Dockerfile  README.md  pyproject.toml
quant-research/data/market/: bars.csv  instruments.csv
quant-research/src/quant_research/backtest/: engine.py
quant-research/src/quant_research/data/: market_provider.py
quant-research/src/quant_research/models/: market.py  signal.py  trading.py
quant-research/src/quant_research/paper/: __init__.py  simulator.py
quant-research/src/quant_research/serve/: main.py
quant-research/src/quant_research/services/: research_service.py  signal_service.py
quant-research/src/quant_research/storage/: __init__.py  sqlite_repository.py
quant-research/src/quant_research/strategy/: daily_alloc.py
quant-research/tests/: test_backtest_engine.py  test_contract_schema.py  test_market_provider.py  test_repository.py  test_research_service.py  test_signal_api.py  test_signal_model.py
quant-research/web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
quant-research/web/e2e/: workbench.spec.ts
quant-research/web/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
scripts/: dev-down.sh  dev-up.sh  smoke-test.sh  verify.sh
trade-executor/: Dockerfile  README.md  pom.xml
(+64 files in other folders)
